# tradingfsd_gpt

./: .gitignore  README.MD  pyproject.toml
data/: CBOE_DLY_VIX1D, 5 (1).csv  SPY_1min.csv  SP_SPX, 5 (1).csv  TVC_VIX, 5 (1).csv
scripts/: fetch_thetadata_option_snapshots.py
src/spx0dte_butterfly_engine/: __init__.py  backtest.py  broker.py  calendar.py  cli.py  contracts.py  execution.py  features.py  ingest.py  live.py  monitoring.py  policy.py  pricing.py  provider.py  regime.py  registry.py  risk.py  simulation.py  storage.py  strategy.py
src/spx0dte_butterfly_engine/ml/: __init__.py  dataset.py  optimize.py  train.py
tests/: test_chain_snapshot_store.py  test_policy_model.py  test_risk_execution.py  test_thetadata_fetch_script.py
